Fastest/src/main/java/compserver/tcasegen/strategies/setlog/setlogtoz/SLog2ZParser.java
// Generated from /home/cristian/workspace/fastest/Fastest/src/main/java/compserver/tcasegen/strategies/setlog/setlogtoz/SLog2Z.g4 by ANTLR 4.5.1
package compserver.tcasegen.strategies.setlog.setlogtoz;

//package compserver.tcasegen.strategies.setlog.setlogtoz;
	import java.util.LinkedList;
	import java.util.List;
	import java.util.HashMap;
	import java.util.ArrayList;
	import java.util.regex.Matcher;
	import java.util.regex.Pattern;
	import java.util.Iterator;
	import javax.swing.tree.DefaultMutableTreeNode;
	import javax.swing.tree.DefaultTreeModel;
	import javax.swing.tree.TreeNode;
	import compserver.tcasegen.strategies.setlog.ztosetlog.ExprParser;
	import compserver.tcasegen.strategies.setlog.TypeManagerLexer;
	import compserver.tcasegen.strategies.setlog.TypeManagerParser;
	import compserver.tcasegen.strategies.setlog.SetLogUtils;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SLog2ZParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		NAME=18, CTE=19, NUM=20, NL=21, WS=22, SKIP=23;
	public static final int
		RULE_lineas = 0, RULE_constr = 1, RULE_restr = 2, RULE_seqIgual = 3, RULE_expr = 4, 
		RULE_exprCte = 5;
	public static final String[] ruleNames = {
		"lineas", "constr", "restr", "seqIgual", "expr", "exprCte"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'_CONSTR'", "'='", "'['", "','", "']'", "'set('", "')'", "'list('", 
		"'integer('", "'neq'", "'int'", "'('", "'{'", "'\\'", "'}'", "'|'", "'-'", 
		null, null, null, "'\n'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "NAME", "CTE", "NUM", "NL", "WS", 
		"SKIP"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SLog2Z.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		HashMap<String,StringPointer> slVars = new HashMap();	
		HashMap<String,String> zNames = new HashMap();
		HashMap<String,String> tipos = new HashMap();
		HashMap<String,String> zVars = new HashMap();
		HashMap<String,String> valoresProhibidos = new HashMap();
		List<String> varNoGenerar = new LinkedList<String>();
		ConstantCreator cc;
		
		public HashMap<String,StringPointer> getSlvars(){
			return slVars;
		}
		
		public HashMap<String,String> getZVars(){
			return zVars;
		}
		
		public ConstantCreator getCC(){
			return cc;
		}

	    
		public void loadTablas(HashMap<String,String> zVars, HashMap<String,String> tipos, HashMap<String,String> zNames){
			this.zNames = zNames;
			this.tipos = tipos;
			this.zVars = zVars;
			
			
			//System.out.println("\n");
			//System.out.println("zNames: "); 
			//printHashMap(zNames);
			//System.out.println("\n tipos: "); 
			//printHashMap(tipos);
			//System.out.println("\n");
			//System.out.println("\n");
			cc = new ConstantCreator(tipos,slVars,zNames,valoresProhibidos);
			
		}
		
		
		private void printHashMap(HashMap map){
			Iterator iterator = map.keySet().iterator();  
			String key,value;
			while (iterator.hasNext()) {  
			   key = iterator.next().toString();
			   if (map.get(key) == null)
				   value = "nullc";
			   else 
				   value = map.get(key).toString();
			   System.out.println(key + " = " + value);  
			} 
		}
		
		private void printHashMap2(HashMap<String,String[]> map){
			Iterator<String> iterator = map.keySet().iterator();  
			String key;	String[] value;
			while (iterator.hasNext()) {  
			   key = iterator.next().toString();
			   if (map.get(key) == null){
				   System.out.println(key + " = " + "nullc");
				   continue;
			   }
			   else{ 
				   
				   value = map.get(key);
				   System.out.print(key + " = "); 
				   for (int i = 0; i<value.length;i++) 
					   System.out.print(value[i] + ",");
				   System.out.println(); 
			   }
			} 
		}
		
		private void preprocesarConstraint(){
		// por que pueden venir variables Z, que solo aparezcan en constraint, no hay que llenarlas en ZVarFiller
			// por que ahi ya pueden tener valor erroneor ej constraint [V neq [], list(V)], con list V se le da valors
				if(valoresProhibidos != null){
				Iterator<String> it = valoresProhibidos.keySet().iterator();
				String var,tipo;
				StringPointer valor;
				while (it.hasNext()) { 
					var = it.next().toString();
					if (zNames != null && zNames.get(var)!=null){
						tipo = tipos.get(zNames.get(var));
						DefaultMutableTreeNode nodo = SetLogUtils.toTreeNorm(tipo);
						valor = new StringPointer(cc.getCte(var,nodo));
						if(slVars != null)
							slVars.put(var, valor);
						}
					}
				}
		}
		
		private void llenarZVars(){
			Iterator iterator = slVars.keySet().iterator();  
			String slname,zname,valor;
			while (iterator.hasNext()) {  
				slname = iterator.next().toString();
				if (slVars.get(slname)!=null){	
					valor = slVars.get(slname).toString();
					
					
					zname = zNames.get(slname);
					if (zVars.containsKey(zname)){
						zVars.put(zname,valor);
					} 	
				}  
			} 
		}
		

	public SLog2ZParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class LineasContext extends ParserRuleContext {
		public ConstrContext constr;
		public ConstrContext constr() {
			return getRuleContext(ConstrContext.class,0);
		}
		public List<TerminalNode> NL() { return getTokens(SLog2ZParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(SLog2ZParser.NL, i);
		}
		public List<SeqIgualContext> seqIgual() {
			return getRuleContexts(SeqIgualContext.class);
		}
		public SeqIgualContext seqIgual(int i) {
			return getRuleContext(SeqIgualContext.class,i);
		}
		public LineasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lineas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SLog2ZListener ) ((SLog2ZListener)listener).enterLineas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SLog2ZListener ) ((SLog2ZListener)listener).exitLineas(this);
		}
	}

	public final LineasContext lineas() throws RecognitionException {
		LineasContext _localctx = new LineasContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_lineas);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(12);
			((LineasContext)_localctx).constr = constr();
			setState(13);
			match(NL);

						//System.out.println("\n valoresProhibidos desigualdades: \n");
						//printHashMap(valoresProhibidos);
						//System.out.println("asaaaaaaa" + "\n");
						preprocesarConstraint();
					
			setState(19); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(15);
				seqIgual();
				setState(17);
				_la = _input.LA(1);
				if (_la==NL) {
					{
					setState(16);
					match(NL);
					}
				}

				}
				}
				setState(21); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NAME );

						//System.out.println("\n**salida SLog2Z**: \n");
						//System.out.println("constraint: " + (((LineasContext)_localctx).constr!=null?_input.getText(((LineasContext)_localctx).constr.start,((LineasContext)_localctx).constr.stop):null) );
						//System.out.println("\nslVars:");
						//printHashMap( slVars );
						llenarZVars();
						//System.out.println("\nzVars vacias +++++++++:");
						//printHashMap(zVars);
						//System.out.println("\n**fin SLog2Z**");
						
					
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstrContext extends ParserRuleContext {
		public List<RestrContext> restr() {
			return getRuleContexts(RestrContext.class);
		}
		public RestrContext restr(int i) {
			return getRuleContext(RestrContext.class,i);
		}
		public ConstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SLog2ZListener ) ((SLog2ZListener)listener).enterConstr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SLog2ZListener ) ((SLog2ZListener)listener).exitConstr(this);
		}
	}

	public final ConstrContext constr() throws RecognitionException {
		ConstrContext _localctx = new ConstrContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_constr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(25);
			match(T__0);

				              	//System.out.println("CONTATNANTOANTs");
				              
			setState(27);
			match(T__1);
			setState(28);
			match(T__2);
			setState(37);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__5) | (1L << T__7) | (1L << T__8) | (1L << T__10) | (1L << T__12) | (1L << T__16) | (1L << NAME) | (1L << CTE))) != 0)) {
				{
				setState(29);
				restr();
				setState(34);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(30);
					match(T__3);
					setState(31);
					restr();
					}
					}
					setState(36);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(39);
			match(T__4);
			setState(40);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RestrContext extends ParserRuleContext {
		public StringPointer valor;
		public ExprContext expr;
		public Token a;
		public Token b;
		public Token NAME;
		public ExprCteContext exprCte;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> NAME() { return getTokens(SLog2ZParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(SLog2ZParser.NAME, i);
		}
		public ExprCteContext exprCte() {
			return getRuleContext(ExprCteContext.class,0);
		}
		public RestrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_restr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SLog2ZListener ) ((SLog2ZListener)listener).enterRestr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SLog2ZListener ) ((SLog2ZListener)listener).exitRestr(this);
		}
	}

	public final RestrContext restr() throws RecognitionException {
		RestrContext _localctx = new RestrContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_restr);
		((RestrContext)getInvokingContext(2)).valor =  new StringPointer();
		try {
			setState(84);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				match(T__5);
				setState(43);
				((RestrContext)_localctx).expr = expr();
				setState(44);
				match(T__6);
				((RestrContext)getInvokingContext(2)).valor.setString("{}"); slVars.put((((RestrContext)_localctx).expr!=null?_input.getText(((RestrContext)_localctx).expr.start,((RestrContext)_localctx).expr.stop):null),((RestrContext)getInvokingContext(2)).valor);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(47);
				match(T__7);
				setState(48);
				((RestrContext)_localctx).expr = expr();
				setState(49);
				match(T__6);
				((RestrContext)getInvokingContext(2)).valor.setString("[]"); slVars.put((((RestrContext)_localctx).expr!=null?_input.getText(((RestrContext)_localctx).expr.start,((RestrContext)_localctx).expr.stop):null),((RestrContext)getInvokingContext(2)).valor);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(52);
				match(T__8);
				setState(53);
				((RestrContext)_localctx).expr = expr();
				setState(54);
				match(T__6);
				((RestrContext)getInvokingContext(2)).valor.setString(cc.getNumber()); slVars.put((((RestrContext)_localctx).expr!=null?_input.getText(((RestrContext)_localctx).expr.start,((RestrContext)_localctx).expr.stop):null),((RestrContext)getInvokingContext(2)).valor);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				{
				setState(57);
				((RestrContext)_localctx).a = match(NAME);
				setState(58);
				match(T__9);
				setState(59);
				((RestrContext)_localctx).b = match(NAME);
				}

							String var1 = (((RestrContext)_localctx).a!=null?((RestrContext)_localctx).a.getText():null);
							String var2 = (((RestrContext)_localctx).b!=null?((RestrContext)_localctx).b.getText():null);
							String s = valoresProhibidos.get(var1);
							 
							if (s!=null && !s.contains(var2)) 
								valoresProhibidos.put(var1,s.concat("," + var2));
							else{
								s = new String(var2);
								valoresProhibidos.put(var1, s);
								}
								
							s = valoresProhibidos.get(var2);
							if (s!=null && !s.contains(var1)) 
								valoresProhibidos.put(var2,s.concat("," + var1));
							else{
								s = new String(var1);
								valoresProhibidos.put(var2, s);
								}
						
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(69);
				switch (_input.LA(1)) {
				case NAME:
					{
					setState(62);
					((RestrContext)_localctx).NAME = match(NAME);
					setState(63);
					match(T__9);
					setState(64);
					((RestrContext)_localctx).exprCte = exprCte();
					}
					break;
				case T__2:
				case T__10:
				case T__12:
				case T__16:
				case CTE:
					{
					setState(65);
					((RestrContext)_localctx).exprCte = exprCte();
					setState(66);
					match(T__9);
					setState(67);
					((RestrContext)_localctx).NAME = match(NAME);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}

							String var = (((RestrContext)_localctx).NAME!=null?((RestrContext)_localctx).NAME.getText():null);
							String cte = (((RestrContext)_localctx).exprCte!=null?_input.getText(((RestrContext)_localctx).exprCte.start,((RestrContext)_localctx).exprCte.stop):null);
							String s = valoresProhibidos.get(var);
							if (s!=null && !s.contains(cte)) 
								valoresProhibidos.put(var,s.concat("," + cte));
							else{
								s = new String(cte);
								valoresProhibidos.put(var, s);
								}
						
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(80);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(73);
					((RestrContext)_localctx).NAME = match(NAME);
					setState(74);
					match(T__9);
					setState(75);
					expr();
					}
					break;
				case 2:
					{
					setState(76);
					expr();
					setState(77);
					match(T__9);
					setState(78);
					((RestrContext)_localctx).NAME = match(NAME);
					}
					break;
				}

							varNoGenerar.add((((RestrContext)_localctx).NAME!=null?((RestrContext)_localctx).NAME.getText():null));	
							slVars.put((((RestrContext)_localctx).NAME!=null?((RestrContext)_localctx).NAME.getText():null),new StringPointer("ValueNotAssigned"));
						
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SeqIgualContext extends ParserRuleContext {
		public StringPointer valor;
		public Token v1;
		public ExprContext v2;
		public List<TerminalNode> NAME() { return getTokens(SLog2ZParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(SLog2ZParser.NAME, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public SeqIgualContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seqIgual; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SLog2ZListener ) ((SLog2ZListener)listener).enterSeqIgual(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SLog2ZListener ) ((SLog2ZListener)listener).exitSeqIgual(this);
		}
	}

	public final SeqIgualContext seqIgual() throws RecognitionException {
		SeqIgualContext _localctx = new SeqIgualContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_seqIgual);
		((SeqIgualContext)getInvokingContext(3)).valor =  new StringPointer();
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(93); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(86);
					((SeqIgualContext)_localctx).v1 = match(NAME);
					slVars.put((((SeqIgualContext)_localctx).v1!=null?((SeqIgualContext)_localctx).v1.getText():null),((SeqIgualContext)getInvokingContext(3)).valor);
					setState(88);
					match(T__1);
					setState(89);
					((SeqIgualContext)_localctx).v2 = expr();
					slVars.put((((SeqIgualContext)_localctx).v2!=null?_input.getText(((SeqIgualContext)_localctx).v2.start,((SeqIgualContext)_localctx).v2.stop):null),((SeqIgualContext)getInvokingContext(3)).valor);
					setState(91);
					match(T__3);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(95); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );

						String zname = zNames.get((((SeqIgualContext)_localctx).v1!=null?((SeqIgualContext)_localctx).v1.getText():null));
						String tipo = tipos.get(zname);
						String var = ((SeqIgualContext)_localctx).v2.valor;
						if (varNoGenerar.contains(var) || varNoGenerar.contains((((SeqIgualContext)_localctx).v1!=null?((SeqIgualContext)_localctx).v1.getText():null))){
							((SeqIgualContext)getInvokingContext(3)).valor.setString("ValueNotAssigned");
							}			
						else if ( !((SeqIgualContext)getInvokingContext(3)).valor.contains("ValueNotAssigned") && !varNoGenerar.contains(var) && !zname.startsWith("\\n") && !tipo.startsWith("BasicType") && !tipo.startsWith("EnumerationType") && !tipo.startsWith("SchemaType") )
							((SeqIgualContext)getInvokingContext(3)).valor.setString(cc.getCte(var,SetLogUtils.toTreeNorm(tipo)));
						 	
					 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public String valor;
		public Token CTE;
		public Token NAME;
		public Token a;
		public Token b;
		public ExprContext e;
		public List<TerminalNode> CTE() { return getTokens(SLog2ZParser.CTE); }
		public TerminalNode CTE(int i) {
			return getToken(SLog2ZParser.CTE, i);
		}
		public List<TerminalNode> NAME() { return getTokens(SLog2ZParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(SLog2ZParser.NAME, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SLog2ZListener ) ((SLog2ZListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SLog2ZListener ) ((SLog2ZListener)listener).exitExpr(this);
		}
	}
